--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "run": "node build/index.js",
+    "run": "node build/server.js",
     "start": "npm run build && npm run run",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,11 +13,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
+    "module-alias": "^2.2.3",
     "pm2": "^5.4.2"
   },
   "devDependencies": {
     "@types/node": "^22.2.0",
     "typescript": "^5.5.4"
+  },
+  "_moduleAliases": {
+    "@": "build"
   }
 }
