--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "run": "node build/server.js",
-    "start": "npm run build && npm run run",
+    "build": "tsc && tsc-alias",
+    "build:watch": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\"",
+    "start": "node build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,14 +15,12 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
-    "module-alias": "^2.2.3",
     "pm2": "^5.4.2"
   },
   "devDependencies": {
     "@types/node": "^22.2.0",
+    "concurrently": "^8.2.2",
+    "tsc-alias": "^1.8.10",
     "typescript": "^5.5.4"
-  },
-  "_moduleAliases": {
-    "@": "build"
   }
 }
