--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tsc:watch": "",
-    "build": "tsc && tsc-alias",
+    "build": "tsc --build tsconfig.json && tsc-alias",
     "build:watch": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\"",
-    "start": "node build/server.js",
+    "start": "node --inspect=0.0.0.0:9229 ./build/server.js",
+    "build:start": "npm run build && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
