--- a/Dockerfile_local
+++ b/Dockerfile_local
@@ -12,7 +12,7 @@ COPY ./tsconfig.json ./
 RUN npm install
 
 # Install pm2 globally
-RUN npm install -g pm2 nodemon
+RUN npm install -g pm2
 
 # Copying all the files in our project
 COPY . .
@@ -24,4 +24,5 @@ EXPOSE 9229
 # Declaring env
 ENV NODE_ENV=development
 
-ENTRYPOINT [ "npm", "run", "build:start" ]
+# Starting the application with pm2
+ENTRYPOINT [ "npm", "run", "build:start:pm2" ]
