--- a/Dockerfile_prod
+++ b/Dockerfile_prod
@@ -25,4 +25,4 @@ EXPOSE 9229
 ENV NODE_ENV=production
 
 # Starting the application with pm2
-CMD [ "pm2-runtime", "ecosystem.config.js" ]
+ENTRYPOINT [ "npm", "run", "build:start:pm2" ]
