--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:watch": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\"",
     "start": "node --inspect=0.0.0.0:9229 ./build/server.js",
     "build:start": "npm run build && npm run start",
+    "build:start:pm2": "npm run build && pm2-runtime ecosystem.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
