--- a/.github/workflows/image-pipeline.yml
+++ b/.github/workflows/image-pipeline.yml
@@ -32,7 +32,7 @@ jobs:
           ECR_REPOSITORY: aws-autorotate-credentials-with-electron-fastify-api
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker-compose build fastify
+          docker compose build fastify
           docker tag fastify:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"  
