--- a/.github/workflows/image-pipeline.yml
+++ b/.github/workflows/image-pipeline.yml
@@ -35,7 +35,7 @@ jobs:
           docker compose build fastify
           docker tag aws-autorotate-credentials-with-electron-fastify-api:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"  
+          echo "{name}={image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG}" >> $GITHUB_OUTPUT
           
       - name: Deploy to App Runner
         id: deploy-apprunner
