--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node --inspect=0.0.0.0:9229 ./build/server.js",
     "build:start": "npm run build && npm run start",
     "build:start:pm2": "npm run build && pm2-runtime ecosystem.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -20,8 +20,12 @@
     "pm2": "^5.4.2"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.2.0",
     "concurrently": "^8.2.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
     "typescript": "^5.5.4"
