--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,11 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["node"],
+    "types": ["jest", "node", "@types/jest"],
     "allowJs": true,
     "checkJs": true,
     "sourceMap": true,
     "outDir": "./build",
-    "rootDir": "./src",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -25,7 +24,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
+    "resolveJsonModule": true,
   },
-  "include": ["./src", "**/*.ts", "src/**/*.ts"],
+  "include": ["./src", "./tests", "**/*.ts", "src/**/*.ts" ],
   "exclude": ["node_modules", "build"]
 }
