--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build:start": "npm run build && npm run start",
     "build:start:pm2": "npm run build && pm2-runtime ecosystem.config.js",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prettier:check": "prettier --check \"**/*.{ts,tsx,js,mjs,md,mdx,css,yaml,yml}\"",
+    "prettier:format": "prettier --write \"**/*.{ts,tsx,js,mjs,md,mdx,css,yaml,yml}\""
   },
   "keywords": [],
   "author": "",
@@ -35,6 +37,7 @@
     "eslint-plugin-import": "^2.31.0",
     "globals": "^15.10.0",
     "jest": "^29.7.0",
+    "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
