--- a/.github/workflows/prettier-pipeline.yml
+++ b/.github/workflows/prettier-pipeline.yml
@@ -1,6 +1,8 @@
 name: Code Quality checks
 
 on:
+  push:
+    branches: [main]
   pull_request:
     branches: [main]
 
@@ -11,11 +13,7 @@ concurrency:
 jobs:
   prettier:
     name: Prettier
-    runs-on: ubuntu-22.04
-
-    strategy:
-      matrix:
-        node-version: [18]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
